Purchase discounts are now broken-down on ledger. Added icons to customer menu options.

--- a/XOSkinWebApp/Views/GiftsAndSavings/Index.cshtml
+++ b/XOSkinWebApp/Views/GiftsAndSavings/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-  <h1 class="display-4">Gifts and <br />Savings</h1>
+  <h1 class="display-4">Savings</h1>
   @Html.Raw(ViewData["GiftsAndSavings.WelcomeText"])
 </div>
 
