--- a/XOSkinWebApp/Views/SubscriptionsAndReferrals/Index.cshtml
+++ b/XOSkinWebApp/Views/SubscriptionsAndReferrals/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-  ViewData["Title"] = "Subscriptions and Referrals";
+  ViewData["Title"] = "Subscriptions";
 }
 
 <div class="text-center">
-  <h1 class="display-4">Subscriptions <br />and Referrals</h1>
+  <h1 class="display-4">Subscriptions</h1>
   @Html.Raw(ViewData["SubscriptionsAndReferrals.WelcomeText"])
 </div>
