--- a/XOSkinWebApp/Areas/Administration/Views/Ledgers/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Ledgers/Index.cshtml
@@ -163,17 +163,20 @@
     var chart1 = new Chart(chart1Context, {
       type: 'doughnut',
       data: {
-        labels: ['Product Sales', 'Product Shipping', 'Sales Taxes', 'Product Refunds'],
+        labels: ['Product Sales', 'Product Shipping', 'Sales Taxes', 'Product Refunds', 'Product Discounts'],
         datasets: [{
           label: '# of Votes',
-          data: [@ViewData["ProductSales"], @ViewData["ProductShipping"], @ViewData["SalesTaxes"], @ViewData["ProductRefunds"]],
+          data: [@ViewData["ProductSales"], @ViewData["ProductShipping"], @ViewData["SalesTaxes"],
+            @ViewData["ProductRefunds"], @ViewData["ProductDiscounts"]],
           backgroundColor: [
             'rgba(171, 255, 171, 0.8)',
             'rgba(255, 229, 171, 0.8)',
             'rgba(171, 246, 255, 0.8)',
-            'rgba(255, 171, 171, 0.8)'
+            'rgba(255, 171, 171, 0.8)',
+            'rgba(255, 165, 0, 0.8)'
           ],
           borderColor: [
+            'rgba(0, 0, 0, 1)',
             'rgba(0, 0, 0, 1)',
             'rgba(0, 0, 0, 1)',
             'rgba(0, 0, 0, 1)',
